[package]
name = "enum_string"
version = "0.1.0"
authors = ["pinosaur"]
repository = "https://github.com/MrPicklePinosaur/pino_utils"
edition = "2021"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/test.rs"

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[dev-dependencies]
trybuild = "1.0"
