[package]
name = "pino_deref"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "Derive macro for Deref and DerefMut"
repository = "https://github.com/MrPicklePinosaur/pino_utils"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/test.rs"

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[dev-dependencies]
trybuild = "1.0"
