[package]
name = "pino_utils"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "general rust utility functions and macros"
repository = "https://github.com/MrPicklePinosaur/pino_utils"

[dependencies]
pino_enum_string = { version = "0.1", path = "../pino_enum_string" }
pino_deref = { version = "0.1", path = "../pino_deref" }
